fixing text display on mobile

--- a/mycss.css
+++ b/mycss.css
@@ -34,11 +34,8 @@ li {
 .faq {
   font-family: serif;
   font-size: 1.5em;
-}
-
-.column > img {
-  display: inline;
-  margin: 0px 5px 0px 5px;
+  display: flex;
+  flex-direction: column;
 }
 
 /* Schedule */
